--- a/index.html
+++ b/index.html
@@ -260,5 +260,30 @@
         <a href="#"><img src="./images/fretty.jpg" alt="" /></a>
       </div>
     </section>
+
+    <section>
+      <div class="hire">
+        <p>Like what you seem?</p>
+        <span>
+          <a href="#">Get in touch</a>
+        </span>
+      </div>
+    </section>
+
+    <div class="footer">
+      <div>
+        <a href="/" class="logo">Mugera Hughes</a>
+
+     
+
+        <nav>
+          <ul>
+            <li><a href="#">My work</a></li>
+            <li><a href="#">My skills</a></li>
+            <li><a href="#">Hire me</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </body>
 </html>
