--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </li>
           <li class="transition2">
             <div class="icon-container two">
-              <img src="./images/icon-frontend.svg" alt="" />
+              <img src="./images/zoom.jpg" alt="" />
             </div>
             <p class="skill-title">Frontend Development</p>
             <p class="featured-desc skill-desc">
@@ -201,7 +201,7 @@
           </li>
           <li class="transition2">
             <div class="icon-container three">
-              <img src="./images/icon-logo.svg" alt="" />
+              <img src="./images/hotel.jpg" alt="" />
             </div>
             <p class="skill-title">Identity Design</p>
             <p class="featured-desc skill-desc">
