add author to readme file

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </li>
           <li class="transition2">
             <div class="icon-container two">
-              <img src="./images/zoom.jpg" alt="" />
+              <img src="./images/icon-frontend.svg" alt="" />
             </div>
             <p class="skill-title">Frontend Development</p>
             <p class="featured-desc skill-desc">
@@ -201,7 +201,7 @@
           </li>
           <li class="transition2">
             <div class="icon-container three">
-              <img src="./images/hotel.jpg" alt="" />
+              <img src="./images/icon-logo.svg" alt="" />
             </div>
             <p class="skill-title">Identity Design</p>
             <p class="featured-desc skill-desc">
@@ -232,7 +232,7 @@
       <div class="portfolio-container transition3">
         <div class="portfolio-left">
           <div class="inner">
-            <p class="subtitle">Guitar App</p>
+            <p class="subtitle">Kibandaski Website</p>
 
             <p class="featured-title">Fretastic.com</p>
             <p class="featured-desc">
@@ -242,12 +242,12 @@
           </div>
         </div>
 
-        <a href="#"><img src="./images/fretty.jpg" alt="" /></a>
+        <a href="#"><img src="./images/hotel.jpg" alt="" /></a>
       </div>
       <div class="portfolio-container transition3">
         <div class="portfolio-left">
           <div class="inner">
-            <p class="subtitle">Guitar App</p>
+            <p class="subtitle">Xoom clone</p>
 
             <p class="featured-title">Fretastic.com</p>
             <p class="featured-desc">
@@ -257,7 +257,7 @@
           </div>
         </div>
 
-        <a href="#"><img src="./images/fretty.jpg" alt="" /></a>
+        <a href="#"><img src="./images/zoom.jpg" alt="" /></a>
       </div>
     </section>
 
@@ -274,7 +274,19 @@
       <div>
         <a href="/" class="logo">Mugera Hughes</a>
 
-     
+        <div class="social-header">
+          <ul>
+            <li>
+              <a href="#"><img src="./images/behance.png" alt="" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./images/githubDark.png" alt="" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./images/linkedin-logo.png" alt="" /></a>
+            </li>
+          </ul>
+        </div>
 
         <nav>
           <ul>
